# AI_cost_diagnostic

./: .gitignore  LICENSE  README.md  input-analysis.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/: launch.json
cli/: agent-scan-deep.ts  agent-scan.ts  analyze-inputs.ts  check.ts  discover.ts  estimate.ts  index.ts  scan.ts  setup.ts
cli/lib/: check-node.ts  exit-codes.ts  findings-path.ts  nanoclaw-cli.ts  nanoclaw.ts  spawn-pnpm.ts  state.ts
docs/: PLAN.md  analyze-inputs-setup.md  ci-setup.md  estimate-setup.md  false-positives.md  reliability.md  setup.md  telemetry-setup.md
estimate/: index.ts
estimate/aggregate/: telemetry.ts
estimate/lib/: estimator.ts  findings-filter.ts  heuristics.ts  open-pricing.ts  pricing.ts  savings.ts  types.ts
estimate/pricing/: models.json
estimate/schema/: estimate.schema.json
estimate/scripts/: validate-estimate.ts
examples/: assumptions.json  sample-estimate.json  sample-events-input-analysis.jsonl  sample-events.jsonl  sample-findings.json
input-analysis/: README.md  metrics.json
lib/: ajv.ts
scripts/: check-node-version.mjs  register-diagnostic-agent.ts
server/: index.ts
telemetry/python/: README.md  pyproject.toml
telemetry/python/diagnostic_agent_telemetry/: __init__.py  anthropic_wrapper.py  fingerprint.py  openai_wrapper.py  writer.py
tests/: analyze-inputs.test.ts  ci.test.ts  classifier.test.ts  discovery.test.ts  estimate.test.ts  patterns.test.ts  quality-scores.test.ts  recommendation.test.ts  telemetry.test.ts
ui/: index.html  package.json
(+76 files in other folders)
